--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 
 	<properties>
 		<java.version>11</java.version>
-		<rocksdb.version>7.4.3</rocksdb.version>
+		<rocksdb.version>6.29.4.1</rocksdb.version>
 	</properties>
 
 	<dependencies>
@@ -37,7 +37,11 @@
 			<artifactId>rocksdbjni</artifactId>
 			<version>${rocksdb.version}</version>
 		</dependency>
-
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.6</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
